<resources>
    <string name="app_name">PokeManager</string>
    <string name="specie">Specie</string>
    <string name="nickname">Nickname</string>
    <string name="level">Level</string>
    <string name="primary_type">Primary Type</string>
    <string name="secondary_type">Secondary Type</string>

    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="fire">Fire</string>
    <string name="water">Water</string>
    <string name="electric">Electric</string>
    <string name="grass">Grass</string>
    <string name="ice">Ice</string>
    <string name="fighting">Fighting</string>
    <string name="poison">Poison</string>
    <string name="ground">Ground</string>
    <string name="flying">Flying</string>
    <string name="psychic">Psychic</string>
    <string name="bug">Bug</string>
    <string name="rock">Rock</string>
    <string name="ghost">Ghost</string>
    <string name="dragon">Dragon</string>
    <string name="dark">Dark</string>
    <string name="steel">Steel</string>
    <string name="fairy">Fairy</string>

    <string name="poke_origin">Origin</string>
    <string name="egg">Egg</string>
    <string name="capture">Catch</string>
    <string name="trade">Trade</string>
    <string name="fossil">Fossil</string>
    <string name="pokemon_specie">Pokemon Specie</string>
    <string name="pokemon_nickname">Pokemon Nickname</string>
    <string name="pokemon_level">Pokemon Level</string>
    <string name="add_to_party">Add to party</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="the_fields_were_cleared">The fields were cleared.</string>
    <string name="invalid_specie_try_again">Invalid specie! Try again.</string>
    <string name="invalid_nickname_try_again">Invalid nickname! Try again.</string>
    <string name="invalid_level_try_again">Invalid level! Try again.</string>
    <string name="level_must_be_an_integer">Level must be an integer.</string>
    <string name="pokemon_level_between_1_and_100">The Pokemon level must be between 1 and 100!</string>
    <string name="primary_type_spinner_no_value">The Primary Type spinner doesn\'t have any value</string>
    <string name="secondary_type_spinner_no_value">The Secondary Type spinner doesn\'t have any value</string>
    <string name="pokemon_origin_is_required">Pokemon origin is required.</string>
    <string name="type_value">"Type: "</string>
    <string name="types_value">"Types: "</string>
    <string name="type_separator">" / "</string>
    <string name="specie_value">"Specie: "</string>
    <string name="nickname_value">"Nickname: "</string>
    <string name="level_value_desc">"Level: "</string>
    <string name="pokemon_origin_value">"Pokemon Origin: "</string>
    <string name="in_party">In party</string>
    <string name="not_in_party">Not in party</string>
    <string name="the_pokemon_of_specie">The pokemon of specie \"</string>
    <string name="was_clicked">\"\nwas clicked!</string>
    <string name="logo_pokemanager_desc">Logo PokeManager</string>
    <string name="app_description">Your personal Pokédex to register and organize your Pokémon team!</string>
    <string name="authorship">Thales Granja</string>
    <string name="about">About</string>
    <string name="pokemon_manager">Pokemon Manager</string>
    <string name="register">Register</string>
    <string name="register_new_pokemon">Register New Pokemon</string>
    <string name="course">Software Engineering</string>
    <string name="email">thalesgranja.dev@gmail.com</string>
    <string name="university">Universidade Tecnológica Federal do Paraná</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_pokemon">Edit Pokémon</string>
    <string name="suggest_origin">Suggest Origin</string>
    <string name="sort">Sort</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="the_settings_have_returned_to_the_installation_defaults">The settings have returned to the installation defaults!</string>
</resources>